# ai-hedge-fund

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: 1.csv  2.csv  README.md  dataset_catalog.csv
data/training_1/: test.csv  train.csv
docs/: features.md  losses.md  metrics.md  strategies.md
notebooks/: hedge_fund_mvp.ipynb  single_asset.ipynb
notebooks/data/: BTCUSDT_1h.csv
notebooks/models/: single-asset-ma-crossover_1_20250925_202459.json  single-asset-ma-crossover_1_20250925_202917.json  single-asset-ma-crossover_1_20250925_204933.json
src/ai_hedge_fund.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/hedge/: __init__.py  data.py  features.py  metrics.py  portfolio.py  run.py  strategies.py  utils.py  viz.py
src/hedge/fitting/: __init__.py  cost_models.py  learning.py  losses.py  torch_utils.py
